<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <EditText
        android:id="@+id/todo_item_content_input"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="NONE"
        android:hint="@string/enter_item_content"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/repeatable_switch"/>


    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/repeatable_switch"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/repeatable"
        app:layout_constraintTop_toBottomOf="@id/todo_item_content_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/repeatable_view"/>

    <ViewSwitcher
        android:id="@+id/repeatable_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/repeatable_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessLeaf" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/repeat_type_explaination_text"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/repeat_type"
                android:text="@string/select_repeat_frequency"/>

            <Spinner
                android:id="@+id/repeat_type"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/repeat_type_explaination_text"
                app:layout_constraintBottom_toTopOf="@id/number_of_days"/>

            <EditText
                android:id="@+id/number_of_days"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:importantForAutofill="no"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/repeat_type"
                app:layout_constraintBottom_toTopOf="@id/end_repeat_switch"
                android:enabled="false"
                android:hint="@string/enter_num_days"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/end_repeat_switch"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:text="@string/end_repeat"
                app:layout_constraintTop_toBottomOf="@id/number_of_days"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/end_date"/>

            <EditText
                android:id="@+id/end_date"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:importantForAutofill="no"
                android:inputType="date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/end_repeat_switch"
                app:layout_constraintBottom_toBottomOf="parent"
                android:enabled="false"
                android:hint="@string/enter_date"/>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ViewSwitcher>


</androidx.constraintlayout.widget.ConstraintLayout>

<!--






    </ViewSwitcher>
-->